# connect-four-game

./: .gitignore  CMakeLists.txt  build_and_run.sh
src/: main.cpp
src/board/: Board.cpp  Board.h
src/game/: Game.cpp  Game.h
src/menu/: Menu.cpp  Menu.h
src/utils/: Utils.cpp  Utils.h
